RESOLVED FIXED91963
Null-pointer crash when parsing border-image
https://bugs.webkit.org/show_bug.cgi?id=91963
Summary Null-pointer crash when parsing border-image
dstockwell
Reported 2012-07-22 23:57:44 PDT
Null-pointer crash when parsing border-image
Attachments
Patch (3.02 KB, patch)
2012-07-22 23:59 PDT, dstockwell
no flags
Patch (2.89 KB, patch)
2012-07-23 16:18 PDT, dstockwell
no flags
dstockwell
Comment 1 2012-07-22 23:59:19 PDT
Alexis Menard (darktears)
Comment 2 2012-07-23 04:42:04 PDT
Comment on attachment 153741 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=153741&action=review > LayoutTests/ChangeLog:8 > + Additional information of the change such as approach, rationale. Please add per-function descriptions below (OOPS!). The changelog is wrong here. > LayoutTests/fast/css/border-image-fill-crash.html:7 > + testRunner.dumpAsText(); You should use the new JS template for test, e.g. fast/css/getComputedStyle/getComputedStyle-margin-shorthand.html
dstockwell
Comment 3 2012-07-23 16:18:44 PDT
dstockwell
Comment 4 2012-07-23 16:23:35 PDT
(In reply to comment #2) > (From update of attachment 153741 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=153741&action=review > > > LayoutTests/ChangeLog:8 > > + Additional information of the change such as approach, rationale. Please add per-function descriptions below (OOPS!). > > The changelog is wrong here. OOPS! Fixed. > > LayoutTests/fast/css/border-image-fill-crash.html:7 > > + testRunner.dumpAsText(); > > You should use the new JS template for test, e.g. fast/css/getComputedStyle/getComputedStyle-margin-shorthand.html I can see how this might be helpful for a JavaScript based test, but in this case I think it would just make the test harder to read, what do you think?
WebKit Review Bot
Comment 5 2012-07-23 17:06:42 PDT
Comment on attachment 153891 [details] Patch Clearing flags on attachment: 153891 Committed r123406: <http://trac.webkit.org/changeset/123406>
WebKit Review Bot
Comment 6 2012-07-23 17:06:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.