Null-pointer crash when parsing border-image https://bugs.webkit.org/show_bug.cgi?id=91963

Patch by Douglas Stockwell <dstockwell@google.com> on 2012-07-23
Reviewed by Darin Adler.

Source/WebCore:

Test: fast/css/border-image-fill-crash.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseBorderImageRepeat): Handle the case where
parseBorderImageRepeat is called when the value list is empty.

LayoutTests:

* fast/css/border-image-fill-crash-expected.txt: Added.
* fast/css/border-image-fill-crash.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@123406 bbb929c8-8fbe-4397-9dbb-9b2b20218538